@@ -1,5 +1,10 @@
 2007-09-20  Tambet Ingo  <tambet@gmail.com>
 
+	* src/gconf-helpers/gconf-helpers.c (property_value_destroy): Implement.
+	(add_property): Implement.
+	(read_one_setting_value_from_gconf): Use variable names that actually exist.
+	(nm_gconf_read_connection): Ditto.
+
 	* src/applet.c (nma_menu_item_activate): s/devtype/type/.
 	(nma_menu_vpn_item_clicked): Use the new VPN activation API.
 	(get_vpn_connections): Implement it. AppletDbusConnectionSettings is _SO_
